# Djoko-Studio

./: AGENTS.md  CLAUDE.md  FEATURE_TRACKER.md  README.md  WORKFLOW.md
.github/: pull_request_template.md
.github/workflows/: validate.yml
.playwright-cli/: page-2026-06-20T22-24-22-280Z.yml
apps/: README.md
apps/web-studio/: README.md  index.html  package-lock.json  package.json  tsconfig.node.json
docs/adr/: ADR-0001-local-first-browser-recording.md  ADR-0002-one-host-one-guest-mvp.md  ADR-0003-guests-join-without-account.md  ADR-0004-chunked-resumable-upload.md  ADR-0005-separate-raw-tracks.md  ADR-0006-defer-concrete-technology-stack-choices.md  ADR-0007-final-export-1080p-16-9.md  ADR-0008-polyglot-monorepo-service-architecture.md  ADR-0009-react-typescript-vite-web-studio.md  ADR-0010-go-api-and-signaling-services.md  ADR-0011-rust-upload-and-media-workers.md  ADR-0012-browser-recording-and-local-persistence.md  ADR-0013-webrtc-p2p-coturn-live-call.md  ADR-0014-storage-queue-and-rendering-stack.md  ADR-0015-defer-reverse-proxy-gateway-choice.md  ADR-0016-browser-local-recording-architecture.md  ADR-0017-resumable-recording-upload-architecture.md  ADR-0018-export-foundation-and-lifecycle.md  ADR-TEMPLATE.md  README.md
docs/agents/: implementation-tooling-policy.md
docs/architecture/: README.md  initial-architecture-brief.md  local-development-environment.md  monorepo-structure.md  open-source-reference-map.md  v0.1-api-domain-model.md  v0.1-technical-stack.md
docs/contracts/: README.md  export-api.md  export-worker-api.md  recording-upload-api.md
infra/: README.md
scripts/: README.md  validate.sh
services/: README.md
services/api/: go.mod  (+2 more)
services/export-worker/: Cargo.toml  README.md
services/export-worker/src/: ffmpeg.rs  http.rs  lib.rs  main.rs  model.rs  service.rs  storage.rs  worker.rs
services/upload/: Cargo.toml  README.md
services/upload/src/: main.rs  model.rs  routes.rs  server.rs  storage.rs
(+101 files in other folders)
